
[Test_run/when_--repo_is_not_prefixed_with_the_owner - 1]

---

[Test_run/when_--repo_is_not_prefixed_with_the_owner - 2]
repository should be in the format of <owner>/<repository>

---

[Test_run/when_--repo_is_not_prefixed_with_the_owner - 3]
null
---

[Test_run/when_an_explicit_group_is_provided_using_the_longhand_flag - 1]
requested reviews on https://github.com/octocat/hello-world/pull/123 from:
  - octodog
  - octopus

---

[Test_run/when_an_explicit_group_is_provided_using_the_longhand_flag - 2]

---

[Test_run/when_an_explicit_group_is_provided_using_the_longhand_flag - 3]
[
 "pr",
 "edit",
 "123",
 "--repo",
 "octocat/hello-world",
 "--add-reviewer",
 "octodog",
 "--add-reviewer",
 "octopus"
]
---

[Test_run/when_an_explicit_group_is_provided_using_the_shorthand_flag - 1]
requested reviews on https://github.com/octocat/hello-world/pull/123 from:
  - octodog
  - octopus

---

[Test_run/when_an_explicit_group_is_provided_using_the_shorthand_flag - 2]

---

[Test_run/when_an_explicit_group_is_provided_using_the_shorthand_flag - 3]
[
 "pr",
 "edit",
 "123",
 "--repo",
 "octocat/hello-world",
 "--add-reviewer",
 "octodog",
 "--add-reviewer",
 "octopus"
]
---

[Test_run/when_an_explicit_repository_is_provided_using_the_longhand_flag - 1]
requested reviews on https://github.com/octocat/hello-sunshine/pull/123 from:
  - octodog
  - octopus

---

[Test_run/when_an_explicit_repository_is_provided_using_the_longhand_flag - 2]

---

[Test_run/when_an_explicit_repository_is_provided_using_the_longhand_flag - 3]
[
 "pr",
 "edit",
 "123",
 "--repo",
 "octocat/hello-sunshine",
 "--add-reviewer",
 "octodog",
 "--add-reviewer",
 "octopus"
]
---

[Test_run/when_an_explicit_repository_is_provided_using_the_shorthand_flag - 1]
requested reviews on https://github.com/octocat/hello-sunshine/pull/123 from:
  - octodog
  - octopus

---

[Test_run/when_an_explicit_repository_is_provided_using_the_shorthand_flag - 2]

---

[Test_run/when_an_explicit_repository_is_provided_using_the_shorthand_flag - 3]
[
 "pr",
 "edit",
 "123",
 "--repo",
 "octocat/hello-sunshine",
 "--add-reviewer",
 "octodog",
 "--add-reviewer",
 "octopus"
]
---

[Test_run/when_an_unknown_flag_is_requested - 1]

---

[Test_run/when_an_unknown_flag_is_requested - 2]
unknown flag: --blah

---

[Test_run/when_an_unknown_flag_is_requested - 3]
null
---

[Test_run/when_doing_a_dry-run - 1]
would have used `gh pr edit --repo octocat/hello-world` to request reviews from:
  - octocat

---

[Test_run/when_doing_a_dry-run - 2]

---

[Test_run/when_doing_a_dry-run - 3]
null
---

[Test_run/when_ghExec_fails - 1]

could not add reviewers: no pull requests found for branch "update-readme"

---

[Test_run/when_ghExec_fails - 2]

---

[Test_run/when_ghExec_fails - 3]
[
 "pr",
 "edit",
 "",
 "--repo",
 "octocat/hello-world",
 "--add-reviewer",
 "octocat"
]
---

[Test_run/when_help_is_requested - 1]

---

[Test_run/when_help_is_requested - 2]
Usage of gh rr:
      --config-dir string   directory to search for the configuration file (default "<homedir>")
      --dry-run             outputs instead of executing gh
  -f, --from string         group of users to request review from (default "default")
  -R, --repo string         select another repository using the [HOST/]OWNER/REPO format

---

[Test_run/when_help_is_requested - 3]
null
---

[Test_run/when_no_arguments_are_provided - 1]
requested reviews on https://github.com/octocat/hello-world/pull/1 from:
  - octodog
  - octopus

---

[Test_run/when_no_arguments_are_provided - 2]

---

[Test_run/when_no_arguments_are_provided - 3]
[
 "pr",
 "edit",
 "",
 "--repo",
 "octocat/hello-world",
 "--add-reviewer",
 "octodog",
 "--add-reviewer",
 "octopus"
]
---

[Test_run/when_the_config_file_does_not_exist - 1]

---

[Test_run/when_the_config_file_does_not_exist - 2]
please create <tempdir>/gh-rr.yml to configure your repositories

---

[Test_run/when_the_config_file_does_not_exist - 3]
null
---

[Test_run/when_the_config_file_is_invalid - 1]

---

[Test_run/when_the_config_file_is_invalid - 2]
yaml: unmarshal errors:
  line 1: cannot unmarshal !!! `` into main.Config

---

[Test_run/when_the_config_file_is_invalid - 3]
null
---

[Test_run/when_the_explicit_repository_is_a_url - 1]

---

[Test_run/when_the_explicit_repository_is_a_url - 2]
repository should be in the format of <owner>/<repository>

---

[Test_run/when_the_explicit_repository_is_a_url - 3]
null
---

[Test_run/when_the_explicit_repository_is_not_prefixed_with_the_owner - 1]

---

[Test_run/when_the_explicit_repository_is_not_prefixed_with_the_owner - 2]
repository should be in the format of <owner>/<repository>

---

[Test_run/when_the_explicit_repository_is_not_prefixed_with_the_owner - 3]
null
---

[Test_run/when_the_group_does_not_exist_in_config - 1]

---

[Test_run/when_the_group_does_not_exist_in_config - 2]
octocat/hello-world does not have a group named does-not-exist

---

[Test_run/when_the_group_does_not_exist_in_config - 3]
null
---

[Test_run/when_the_repository_does_not_exist_in_config - 1]

---

[Test_run/when_the_repository_does_not_exist_in_config - 2]
no reviewers are configured for octocat/hello-world

---

[Test_run/when_the_repository_does_not_exist_in_config - 3]
null
---

[Test_run/when_the_target_is_not_a_number - 1]
requested reviews on https://github.com/octocat/hello-world/pull/abc from:
  - octodog
  - octopus

---

[Test_run/when_the_target_is_not_a_number - 2]

---

[Test_run/when_the_target_is_not_a_number - 3]
[
 "pr",
 "edit",
 "abc",
 "--repo",
 "octocat/hello-world",
 "--add-reviewer",
 "octodog",
 "--add-reviewer",
 "octopus"
]
---

[Test_run_WithoutRepoFlag - 1]
requested reviews on https://github.com/G-Rath/gh-rr from:
  - octocat

---

[Test_run_WithoutRepoFlag - 2]

---

[Test_run_WithoutRepoFlag - 3]
[
 "pr",
 "edit",
 "",
 "--repo",
 "G-Rath/gh-rr",
 "--add-reviewer",
 "octocat"
]
---
